--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ composeNavigation = "2.8.0-alpha08"
 serialization = "1.6.3"
 retrofit = "2.11.0"
 glide = "4.16.0"
-hilt = "2.51.1"
+hilt = "2.51"
+hilt-compose = "1.2.0"
 ksp = "1.9.0-1.0.13"
 coroutines = "1.7.3"
 viewModel = "2.8.0"
@@ -43,6 +44,7 @@ gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref 
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
+hilt-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-compose" }
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 lifecycle-viewModel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "viewModel" }
 
